--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -3,17 +3,13 @@
   // Controls if the editor will insert spaces for tabs. Accepted values:  "auto", true, false. If set to "auto", the value will be guessed when a file is opened.
   "editor.insertSpaces": true,
   "editor.tabSize": 2,
-
   // Configure glob patterns for excluding files and folders.
   "files.exclude": {
     "**/.git": true,
     "**/node_modules/**": true,
-    "test/*.js": true,
-    "test/*.js.map": true,
-    "src/*.js": true,
-    "src/*.js.map": true
+    "typings/browser": true,
+    "typings/browser.d.ts": true
   },
-
   // When enabled, will trim trailing whitespace when you save a file.
   "files.trimTrailingWhitespace": true
 }
