--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,9 +3,12 @@
     "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
+    "outDir": "build",
     "jsx": "react"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "typings/browser",
+    "typings/browser.d.ts"
   ]
 }
