--- a/client/.travis.yml
+++ b/client/.travis.yml
@@ -1,6 +1,13 @@
-language: node_js
-node_js:
-  - "5.10.1"
+language: python
+python:
+  - 3.5
+
+install:
+  - nvm install 5.10.1
+  - npm install
 
 after_install:
   - ./node_modules/.bin/typings install
+
+script:
+  - npm test
